test_scores/negative_dimers/features/Q6ZW31.pkl.xz
/g/alphafold/input_features/Homo_sapiens/features/Q6ZW31.pkl.xz